--- a/Examen/Examen.csproj
+++ b/Examen/Examen.csproj
@@ -145,7 +145,6 @@
     <Compile Include="Models\UsuarioGen.cs" />
     <Compile Include="Models\Weather.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Home\AddCity.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -197,6 +196,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\signup.cshtml" />
     <Content Include="Views\Home\SearchCity.cshtml" />
+    <Content Include="Views\Home\AddCity.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
